WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221496
[Cocoa] Encrypted media segments should generate a parser error if no encrypted media handler is present.
https://bugs.webkit.org/show_bug.cgi?id=221496
Summary
[Cocoa] Encrypted media segments should generate a parser error if no encrypt...
Jer Noble
Reported
2021-02-05 12:07:55 PST
[Cocoa] Encrypted media segments should generate a parser error if no encrypted media handler is present.
Attachments
Patch
(4.97 KB, patch)
2021-02-05 12:11 PST
,
Jer Noble
eric.carlson
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(5.24 KB, patch)
2021-02-05 14:40 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-02-05 12:10:42 PST
<
rdar://73839984
>
Jer Noble
Comment 2
2021-02-05 12:11:26 PST
Created
attachment 419443
[details]
Patch
Jer Noble
Comment 3
2021-02-05 14:40:01 PST
Created
attachment 419466
[details]
Patch for landing
EWS
Comment 4
2021-02-08 12:35:17 PST
commit-queue failed to commit
attachment 419466
[details]
to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 5
2021-02-08 13:25:43 PST
Committed
r272544
: <
https://commits.webkit.org/r272544
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419466
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug