Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.h
@@ -96,6 +96,7 @@ public:
         ReceivedEbmlInsideSegment,
         UnsupportedVideoCodec,
         UnsupportedAudioCodec,
+        ContentEncrypted,
     };
 
     enum class State : uint8_t {
@@ -248,6 +249,7 @@ private:
     webm::Status OnFrame(const webm::FrameMetadata&, webm::Reader*, uint64_t* bytesRemaining) final;
 
     std::unique_ptr<InitializationSegment> m_initializationSegment;
+    Vector<std::pair<uint64_t, Ref<Uint8Array>>> m_keyIds;
     webm::Status m_status;
     std::unique_ptr<webm::WebmParser> m_parser;
     bool m_initializationSegmentEncountered { false };
